Question page designed

--- a/question.html
+++ b/question.html
@@ -14,9 +14,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&display=swap" rel="stylesheet">
 
+    <!-- Font Awesome -->
     <title>Quiz</title>
+    <script src="https://kit.fontawesome.com/41377152c7.js" crossorigin="anonymous"></script>
+
 </head>
 <body class="question-page">
-    
+    <div class="container">
+        <a href="index.html"><button class="btn btn-outline-dark button-exit"><i class="fa-solid fa-circle-xmark button-x"></i></button></a>
+    </div>
+    <div class="container question">
+        <h2 class="question-heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, architecto.</h2>
+        <button class="btn btn-lg btn-block btn-option">Lorem.</button>
+        <button class="btn btn-lg btn-block btn-option">Lorem.</button>
+        <button class="btn btn-lg btn-block btn-option">Lorem.</button>
+    </div>
 </body>
 </html>
