--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
         <a href="question.html"><button class="btn btn-outline-light btn-lg">Start</button></a>
     </div>
     <img class="statistics" src="images/Statistics.svg" alt="statistics-img">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
