--- a/question.html
+++ b/question.html
@@ -25,9 +25,13 @@
     </div>
     <div class="container question">
         <h2 class="question-heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, architecto.</h2>
-        <button class="btn btn-lg btn-block btn-option">Lorem.</button>
-        <button class="btn btn-lg btn-block btn-option">Lorem.</button>
-        <button class="btn btn-lg btn-block btn-option">Lorem.</button>
+        <button class="btn btn-lg btn-block btn-option" id="option1">Lorem.</button>
+        <button class="btn btn-lg btn-block btn-option" id="option2">Lorem.</button>
+        <button class="btn btn-lg btn-block btn-option" id="option3">Lorem.</button>
     </div>
+    <button class="btn btn-lg btn-continue">Continue</button>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
