--- a/question.html
+++ b/question.html
@@ -29,7 +29,9 @@
         <button class="btn btn-lg btn-block btn-option" id="option2">Lorem.</button>
         <button class="btn btn-lg btn-block btn-option" id="option3">Lorem.</button>
     </div>
-    <button class="btn btn-lg btn-continue">Continue</button>
+    <div class="parent-btn">
+        <button class="btn btn-lg btn-continue">Next</button>
+    </div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="index.js"></script>
