--- a/question.html
+++ b/question.html
@@ -30,7 +30,7 @@
         <button class="btn btn-lg btn-block btn-option" id="option3">Lorem.</button>
     </div>
     <div class="parent-btn">
-        <button class="btn btn-lg btn-continue">Next</button>
+        <a href="#" class="next-link"><button class="btn btn-lg btn-continue">Next</button></a>
     </div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
