--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body class="landing-page">
     <div>
-        <h1 class="heading">English Quiz</h1>
+        <h1 class="heading">Quizz Whizz</h1>
         <img class="seprect" src="images/seprect.svg" alt="seperator">
     </div>
     <div>
